Use smooth animation instead of keyframes, make sure even info does not overflow screen width too much

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,22 +45,25 @@ a { text-decoration: none; }
 
 .event-marker {
   background-size: cover;
+
   width: 50px;
   height: 50px;
+  max-width: 100%;
+
   border-radius: 50%;
   z-index: 1;
   cursor: pointer;
+
   transition:
     width 1s ease-in-out,
     height 1s ease-in-out,
     margin-left 1s ease-in-out,
     margin-top 1s ease-in-out,
-    border-radius 1s ease-in-out,
+    border-radius 1.3s ease-in-out,
     filter .2s ease-in-out,
     z-index 1s ease-in-out;
 }
-.event-marker:hover {
-  filter: brightness(1.1);
+.event-marker.active, .event-marker:hover {
   margin-left: -150px;
   margin-top: -100px;
   width: 450px;
@@ -68,41 +71,10 @@ a { text-decoration: none; }
   border-radius: 0;
   z-index: 2;
 }
-.event-marker:hover .event-info {
+.event-marker:hover { filter: brightness(1.1); }
+.event-marker.active .event-info, .event-marker:hover .event-info {
   font-size: 1rem;
 }
-.event-marker.active {
-  animation: scaleMarkerStepwise 2s steps(3, start) forwards;
-}
-.event-marker.active .event-info {
-  animation: scaleFontStepwise 2s steps(3, start) forwards;
-}
-
-@keyframes scaleMarkerStepwise {
-  to {
-    margin-left: -150px;
-    margin-top: -100px;
-    width: 450px;
-    height: 350px;
-    border-radius: 0;
-    z-index: 2;
-  }
-  from {
-    margin-left: 0;
-    margin-top: 0;
-    width: 50px;
-    height: 50px;
-    border-radius: 0;
-    z-index: 1;
-  }
-}
-
-@keyframes scaleFontStepwise {
-  to {
-    font-size: 1rem;
-  }
-}
-
 .event-info {
   color: white;
   background-size: cover;
@@ -123,11 +95,8 @@ a { text-decoration: none; }
   font-family: 'TelefonBoldItalic', Verdana, sans-serif;
   line-height: 1.5;
 }
-.start-time { font-size: 3.1em; }
-.title {
-  font-size: 1.8em;
-  padding-left: 1em;
-}
+.start-time { font-size: 3.2em; }
+.title { font-size: 1.9em; }
 
 .location-marker {
   width: 15px;
